# KAT

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: KAT.h  fileFolders.h  genome.h  genomeParser.h  inputOutput.h  referenceAligner.h  textIndex.h
src/: KAT.cpp  fileFolders.cpp  genome.cpp  genomeParser.cpp  inputOutput.cpp  main.cpp  referenceAligner.cpp  textIndex.cpp
test_1/References/: chlamydia_trachomatis.fasta
test_1/Samples/: streptococcus_agalacticae.fasta
